// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sessionResolved callbacks dispatches expected actions on failed request 1`] = `
Array [
  Object {
    "payload": Object {
      "articleID": 4567,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/SESSION_RESOLVED_PENDING",
  },
  Object {
    "payload": Object {
      "articleID": 4567,
      "error": Object {
        "error": "blah",
      },
      "sessionID": 1234,
    },
    "type": "widget/answerBot/SESSION_RESOLVED_REJECTED",
  },
]
`;

exports[`sessionResolved callbacks dispatches expected actions on successful request 1`] = `
Array [
  Object {
    "payload": Object {
      "articleID": 4567,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/SESSION_RESOLVED_PENDING",
  },
  Object {
    "payload": Object {
      "articleID": 4567,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/SESSION_RESOLVED_FULFILLED",
  },
]
`;

exports[`sessionResolved dispatches the expected pending actions 1`] = `
Array [
  Object {
    "payload": Object {
      "articleID": 4567,
      "sessionID": 1234,
    },
    "type": "widget/answerBot/SESSION_RESOLVED_PENDING",
  },
]
`;

exports[`sessionResolved sends the expected http params 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "callbacks": Object {
          "done": [Function],
          "fail": [Function],
        },
        "method": "post",
        "params": Object {
          "article_id": 4567,
          "deflection_id": 888,
          "interaction_access_token": Object {
            "y": 2,
          },
          "resolution_channel_id": 67,
        },
        "path": "/api/v2/answer_bot/resolution",
      },
    ],
  ],
  "results": undefined,
}
`;
